objects/smartlists__Context__c.object
<CustomObject>
    <fields>
        <fullName>smartlists__Data_Provider_Class__c</fullName>
        <label>Data Provider Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Data_Source_Type__c</fullName>
        <label>Data Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__List_ID__c</fullName>
        <externalId>true</externalId>
        <label>List ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>smartlists__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Parent_Id_Field__c</fullName>
        <label>Parent Id Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Parent_Key_Field__c</fullName>
        <label>Parent Key Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Parent_Object__c</fullName>
        <label>Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smartlists__Query_Fields__c</fullName>
        <label>Query Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Context</label>
    <nameField>
        <displayFormat>CX-{00000000}</displayFormat>
        <label>Context Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Context</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>